--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "nuxt": "^2.0.0",
+    "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-yandex-maps": "^0.10.6",
     "vue2-gmap-custom-marker": "^5.5.9",
     "vue2-google-maps": "^0.10.7"
   },
