--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "nuxt": "^2.0.0",
     "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-clamp": "^0.2.2",
     "vue-yandex-maps": "^0.10.6",
-    "vue2-gmap-custom-marker": "^5.5.9",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-perfect-scrollbar": "^1.3.0"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
