--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.2",
-    "vue-select": "^3.4.0",
+    "vue-clickaway": "^2.2.2",
     "vue2-perfect-scrollbar": "^1.3.0",
     "ymaps": "^0.2.1"
   },
