--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "universal-cookie": "^4.0.3",
     "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.2",
