feat(gitlab-ci): adding work with .env.js file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,33 +4,35 @@ stages:
   - build
   - deploy
 
-build prod:
-  image: node:10.15.0-stretch
-  stage: build
-  only:
-    - tags
-  script:
-    - npm ci
-    - npm run build
-deploy prod:
-  stage: deploy
-  only:
-    - tags
-  script:
-  - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "ls -la"
-
 build stage:
   image: node:10.15.0-stretch
   stage: build
   only:
+    - tags
+  script:
+    - npm ci
+    - cp .env.example.js .env.js
+    - npm run build
+deploy stage:
+  stage: deploy
+  only:
+    - tags
+  script:
+    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "ls -la"
+
+build master:
+  image: node:10.15.0-stretch
+  stage: build
+  only:
     - master
   script:
     - npm ci
+    - cp .env.example.js .env.js
     - npm run build
 
-deploy stage:
+deploy master:
   stage: deploy
   only:
     - master
   script:
-    - echo "test"
+    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "ls -la"
