--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.2",
+    "vue-click-outside": "^1.0.7",
     "vue-clickaway": "^2.2.2",
+    "vue-youtube": "^1.4.0",
     "vue2-perfect-scrollbar": "^1.3.0",
     "ymaps": "^0.2.1"
   },
