fix(gitlab-ci) change names of stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build develop:
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
-deploy master:
+deploy develop:
   stage: deploy
   only:
     - develop
@@ -40,11 +40,11 @@ deploy master:
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker stop krym-$CI_COMMIT_BRANCH"    
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker run -d --name krym-$CI_COMMIT_BRANCH --restart=on-failure:10 -p 127.0.0.1:3000:3000 krym-vue/$CI_COMMIT_BRANCH:latest"       
 
-build develop:
+build master:
   image: docker:19.03.1
   stage: build
   only:
-    - develop
+    - master
   services:
     - docker:19.03.1-dind
   variables:
