--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build develop:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker pull $CI_REGISTRY_IMAGE:latest
+    # - docker pull $CI_REGISTRY_IMAGE:latest
     - cp .env.example.js .env.js
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
@@ -52,7 +52,7 @@ build master:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker pull $CI_REGISTRY_IMAGE:latest
+    # - docker pull $CI_REGISTRY_IMAGE:latest
     - cp .env.example.js .env.js
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
