--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,10 +31,13 @@ build develop:
     - docker push $IMAGE_TAG
 
 deploy develop:
+  image: alpine:3.11
+  RUN apk add --no-cache mysql-client
   stage: deploy
   only:
     - develop
   script:
+    - apk update && apk add openssh
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_DEVELOP && git fetch origin"
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && git reset --hard origin/$CI_COMMIT_BRANCH"
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker build . -t krym-vue/$CI_COMMIT_BRANCH:latest"
