--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,10 +62,12 @@ build master:
     - docker push $IMAGE_TAG
 
 deploy master:
+  image: alpine:3.11
   stage: deploy
   only:
     - master
   script:
+    - apk update && apk add openssh
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && git fetch origin"
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && git reset --hard origin/$CI_COMMIT_BRANCH"
     - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker build . -t krym-vue/$CI_COMMIT_BRANCH:latest"
