--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
+    "@nuxtjs/gtm": "^2.2.3",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cookie-universal-nuxt": "^2.1.1",
