--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ build develop:
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - echo $IMAGE_TAG
+    - echo $CI_COMMIT_REF_SLUG
     - docker pull $CI_REGISTRY_IMAGE:latest || true
     - docker build -t $IMAGE_TAG . --build-arg URL_API=$URL_API
     - docker push $IMAGE_TAG
