--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,12 +22,11 @@ build develop:
   services:
     - docker:19.03.1-dind
   variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG:latest
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - echo $IMAGE_TAG
-    - echo $CI_COMMIT_REF_SLUG
-    - docker pull $CI_REGISTRY_IMAGE:latest || true
+    - docker pull $IMAGE_TAG || true
+    - Echo "Build image for $URL_API"
     - docker build -t $IMAGE_TAG . --build-arg URL_API=$URL_API
     - docker push $IMAGE_TAG
 
