--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ stages:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG:latest
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - echo $IMAGE_TAG
     - docker pull $IMAGE_TAG || true
     - echo "Build image for $URL_API"
     - docker build -t $IMAGE_TAG . --build-arg URL_API=$URL_API
