feat(gitlab-ci): added environment scopes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,18 @@ stages:
   - build
   - deploy
 
+.master_environment:
+  environment:
+    name: master
+    url: https://master.krym-project.cloud
+  
+.develop_environment:
+  environment:
+    name: develop
+    url: https://develop.krym-project.cloud
+
+
+
 .build_template:
   image: docker:19.03.1
   stage: build
