--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,13 +49,13 @@ stages:
     - ssh_run $SSH_PARAMS "$SSH_PRIVATE_KEY" "docker image prune -f" || true   
     
     
-# build develop:
-#   extends: 
-#   extends:
-#     - .build_template
-#     - .develop_environment
-#   only:
-#     - develop
+build develop:
+  extends: 
+  extends:
+    - .build_template
+    - .develop_environment
+  only:
+    - develop
 
 deploy develop:
   extends: 
@@ -67,32 +67,18 @@ deploy develop:
     - develop
 
 build master:
-  image: docker:19.03.1
-  stage: build
+  extends: 
+  extends:
+    - .build_template
+    - .master_environment
   only:
     - master
-  services:
-    - docker:19.03.1-dind
-  variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-  script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    # - docker pull $CI_REGISTRY_IMAGE:latest
-    - cp .env.example.js .env.js
-    - docker build -t $IMAGE_TAG .
-    - docker push $IMAGE_TAG
 
 deploy master:
-  image: alpine:3.11
-  stage: deploy
+  extends: 
+    - .deploy_template
+    - .develop_environment
+  variables: 
+    PORT: 3001
   only:
     - master
-  script:
-    - apk update && apk add openssh
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && git fetch origin"
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && git reset --hard origin/$CI_COMMIT_BRANCH"
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker build . -t krym-vue/$CI_COMMIT_BRANCH:latest"
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker stop krym-$CI_COMMIT_BRANCH || true"   
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker rm krym-$CI_COMMIT_BRANCH || true" 
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker run -d --name krym-$CI_COMMIT_BRANCH --restart=on-failure:10 -p 127.0.0.1:3001:3000 krym-vue/$CI_COMMIT_BRANCH:latest"       
-    - ssh_run "$REMOTE_USER" "$REMOTE_HOST" "$SSH_PRIVATE_KEY" "cd $REMOTE_DIR_MASTER && docker image prune -f"       
