fix(gitlab-ci): fix logging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ stages:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - echo $IMAGE_TAG
     - docker pull $IMAGE_TAG || true
-    - echo "Build image for $URL_API"
+    - echo "build image for "
+    - echo $URL_API
     - docker build -t $IMAGE_TAG . --build-arg URL_API=$URL_API --compress --cache-from $IMAGE_TAG
     - docker push $IMAGE_TAG 
 
