--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-universal-nuxt": "^2.1.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
+    "nuxt-lazy-load": "^1.2.4",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "universal-cookie": "^4.0.3",
