--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stylus-loader": "^3.0.2",
     "universal-cookie": "^4.0.3",
     "v-body-scroll-lock": "^1.1.3",
+    "v-photoswipe": "^1.0.3-1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.2",
     "vue-click-outside": "^1.0.7",
