fix(gitlab-ci): added _ to name of stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,14 +47,14 @@ stages:
     # - ssh_run $SSH_PARAMS "$SSH_PRIVATE_KEY" "docker image prune -f" || true   
     
     
-build develop:
+build_develop:
   extends:
     - .build_template
     - .develop_environment
   only:
     - develop
 
-deploy develop:
+deploy_develop:
   extends: 
     - .deploy_template
     - .develop_environment
@@ -63,15 +63,15 @@ deploy develop:
   only:
     - develop
   needs: ["build_develop"]
-  
-build master:
+
+build_master:
   extends:
     - .build_template
     - .master_environment
   only:
     - master
 
-deploy master:
+deploy_master:
   extends: 
     - .deploy_template
     - .master_environment
