--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/gtm": "^2.2.3",
+    "@qonfucius/nuxt-prometheus-module": "^0.1.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cookie-universal-nuxt": "^2.1.1",
