--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-cool-lightbox": "^2.4.1",
     "vue-youtube": "^1.4.0",
+    "vue-zoomer": "^0.3.6",
     "vue2-perfect-scrollbar": "^1.3.0",
     "ymaps": "^0.2.1"
   },
