--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cookie-universal-nuxt": "^2.1.1",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "nuxt-lazy-load": "^1.2.4",
