--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@qonfucius/nuxt-prometheus-module": "^0.1.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
@@ -25,6 +26,7 @@
     "universal-cookie": "^4.0.3",
     "v-body-scroll-lock": "^1.1.3",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-chartjs": "^3.5.0",
     "vue-clamp": "^0.2.2",
     "vue-click-outside": "^1.0.7",
     "vue-clickaway": "^2.2.2",
