--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.9.3",
     "cookie-universal-nuxt": "^2.1.4",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "moment": "^2.28.0",
     "nuxt": "^2.14.5",
     "nuxt-lazy-load": "^1.2.4",
