--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-youtube": "^1.4.0",
     "vue-zoomer": "^0.3.6",
     "vue2-perfect-scrollbar": "^1.5.0",
+    "vuex-persistedstate": "^3.1.0",
     "ymaps": "^0.2.1"
   },
   "devDependencies": {
